[package]
name = "goprowifihack"
version = "0.1.0"
authors = ["fschaupp"]
edition = "2018"

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
reqwest = {version = "0.11.0", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"